* ModifyIssue.java:  doSaveUrl(): URL description field is not required when entering a URL. do not check for it. * ViewIssueTab4Url.vm: if user has not enter a description for an URL, link text will be same as the link URL. Issue number:  19251 Reviewed by:   venkat

--- a/src/templates/viewIssue/ViewIssueTab4Url.vm
+++ b/src/templates/viewIssue/ViewIssueTab4Url.vm
@@ -23,7 +23,11 @@
        <input type="checkbox" name="url_delete_$url.AttachmentId" />
      </td>
      #end
+     #if ($url.Name && !$url.Name.toString().equals(""))
      <td><a href="$url.Data">$url.Name</a></td>
+     #else
+     <td><a href="$url.Data">$url.Data</a></td>
+     #end
      #if ($canEdit)
       #set ($urlGroup = $intake.Attachment.mapTo($url))
          <td><input type="text" size="25" name="$urlGroup.Data.Key" 
