--- a/src/templates/reports/SelectUsers.vm
+++ b/src/templates/reports/SelectUsers.vm
@@ -56,7 +56,7 @@
 
 #set ($param = ["headingtype", "1"])
 #set($booldummy = $parameters.add($param))
-#userList($mitList false false $parameters)
+#userList($mitList false true $parameters)
 
 <div class="functnbar3">
  <input type="submit" name="eventSubmit_doAddusers" value="$l10n.AddAssignee" />
