Issue number:  SCB569 Initial Screen Create Account and Admin > Users > Add User differences
A user is allowed to select a username while creating a new account.
Now the admin is also allowed to define a username (the email was used as username before this change)

This patch also replaces some hardcoded messages and uses the l10n tool instead.

--- a/src/templates/screens/admin/AddUser.vm
+++ b/src/templates/screens/admin/AddUser.vm
@@ -22,12 +22,14 @@
 
 #if (($lastAction) && ($lastAction =="addeduser"))
     #set ($regGroup = $intake.Register.Default)
+    #set ($userNameData = "")
     #set ($firstNameData = "")
     #set ($lastNameData = "")
     #set ($emailData = "")
     #set ($passwordData = "")
 #else
     #set ($regGroup = $intake.Register.Default)
+    #set ($userNameData = $regGroup.UserName)
     #set ($firstNameData = $regGroup.FirstName)
     #set ($lastNameData = $regGroup.LastName)
     #set ($emailData = $regGroup.Email)
@@ -48,6 +50,13 @@
  <td>
   <input name="$regGroup.LastName.Key" value="$lastNameData" type="text" size="25" />
   #fieldErrorMsg($regGroup.LastName "")
+ </td>
+</tr>
+<tr>
+ <th>* $l10n.Username</th>
+ <td>
+  <input name="$regGroup.UserName.Key" value="$userNameData" type="text" size="25" />
+  #fieldErrorMsg($regGroup.UserName "")
  </td>
 </tr>
 <tr>
