Issue number:  SCB831 Username field on Change password screen is editable but has no effect
The Username is now displayed as label

This patch also replaces some hardcoded messages and uses the l10n tool instead.

--- a/src/templates/screens/ChangePassword.vm
+++ b/src/templates/screens/ChangePassword.vm
@@ -16,14 +16,14 @@
 <form action="$link.setPage("ChangePassword.vm")" method="post">
  <input type="hidden" name="action" value="ChangePassword" />
  <input type="hidden" name="$scarabG.Constant.NEXT_TEMPLATE" value="$data.User.HomePage" />
+ <input type="hidden" name="username" value="$!userNameValue" />
  
 <div class="axial">
 <table cellpadding="3" cellspacing="2" border="0">
  <tr>
   <th>$l10n.Username</th>
   <td>
-   <input type="text" size="25" name="$regGroup.UserName.Key" value="$!userNameValue" />
-   #fieldErrorMsg($regGroup.UserName "")
+   $!userNameValue
   </td>
  </tr>
  <tr>
