Don't display Template dropdown in top navigation, if new artifacts cannot be entered for the project/artifact type.
File: scarab/src/templates/navigations/SearchNav.vm:

Permission check - "$scarabR.hasPermission($scarabG.Permission.ISSUE__ENTER,
$module)" - added before displaying template dropdown.

--- a/src/templates/navigations/SearchNav.vm
+++ b/src/templates/navigations/SearchNav.vm
@@ -84,7 +84,7 @@
   </td>
 #end
 
-#if ($currentIssueType)
+#if ($currentIssueType &&  $scarabR.hasPermission($scarabG.Permission.ISSUE__ENTER, $module))
   ## Add Template list to the top bar so that using a template will be easier
   #set ($allTemplates = $scarabR.AllIssueTemplates)
   #if ($allTemplates.size() > 0)    
