* UserList.vm: update macro #userList call with activeOnly flag argument. Issue number:  19421

--- a/src/templates/screens/UserList.vm
+++ b/src/templates/screens/UserList.vm
@@ -101,7 +101,7 @@
 </div>
   #end
 
-#userList($mitList true true $parameters)
+#userList($mitList true true $parameters false)
 
 <div class="functnbar3">
  <input type="submit" name="eventSubmit_doAddusers" value="$l10n.AddAssignee" />
