Issue number: 18913 - Cannot copy an imported issue.  This commit should also close out several related issues - 19560, 19564, 19565, 19567
Modified files:
* src/i18n/ScarabBundle_en_US.properties - removed IssueAttributeValueActive
  resource as its no longer used
* src/java/org/tigris/scarab/actions/MoveIssue.java -
  doSaveIssue: better error reporting.  It is never a good idea to just
  set an alert message to the exception message as it can be null (as is
  often the case with a NPE).  Also log the full stacktrace to make it easier
  to track down a problem.
* src/templates/screens/MoveIssue2.vm - the current module and issuetype
  are not relevant, only the module and issue type of the issues being moved.
  Removed $attrValues and $attrInput as they were not used. $displayValue
  should always have a value and if it doesn't, it has nothing to do with
  automatic activation of an attribute, so removed that logic.  Also fixed
  $attr.Attribute problem (an attribute doesn't have an associated attribute).

Reviewed by: stack

--- a/src/templates/screens/MoveIssue2.vm
+++ b/src/templates/screens/MoveIssue2.vm
@@ -14,14 +14,15 @@
 #set ($newIssueTypeId = $moveIssueGroup.IssueTypeId.Value)
 #set ($newModule = $scarabR.getModule("$newModuleId"))
 #set ($newIssueType = $scarabR.getIssueType("$newIssueTypeId"))
-#set ($module = $scarabR.CurrentModule)
-#set ($issueType = $scarabR.CurrentIssueType)
+## $issue is really only valid if its a single issue move, but we only
+## handle the case where multiple issues come from the same module and type
+## so $module and $issueType are valid
+#set ($issue = $scarabR.getIssue($data.Parameters.getString("issue_ids")))
+#set ($module = $issue.Module)
+#set ($issueType = $issue.IssueType)
 #set ($isMultiple =$scarabG.sizeOfArray($issueList) > 1)
 
 #if (!$isMultiple)
-  #foreach ($issueId in $issueList)
-    #set ($issue = $scarabR.getIssue($issueId))
-  #end
   ## For single issue move, display attribute values for this issue
   #set ($matchingAttributes = $issue.getMatchingAttributeValuesList($newModule, $newIssueType))
   #set ($orphanAttributes = $issue.getOrphanAttributeValuesList($newModule, $newIssueType))
@@ -59,9 +60,6 @@
   <input type="submit" value="$l10n.Cancel" name="eventSubmit_doBacktoone" />
 </div>
 
-#set ($attrValues = $issue.AllAttributeValuesMap)
-#set ($attrInput = $intake.AttributeValue.mapTo($attVal))
-
 <h3>$l10n.Destination</h3>
 <div class="axial">
 <table border="1" cellspacing="2" cellpadding="3">
@@ -88,17 +86,13 @@
      #set ($attr = $attVal.Attribute)
   #end
   #indexedRows($velocityCount)
-  #set ($displayValue = $module.getRModuleAttribute($attr, $issueType).getDisplayValue())
   <td>
-    #if ($displayValue)
      $attr.Name
-     #if (!$attr.Attribute.Name.equals($displayValue))
+     #set ($displayValue = $module.getRModuleAttribute($attr, $issueType).getDisplayValue())
+    #if (!$attr.Name.equals($displayValue))
       ($displayValue)
      #end
-    #else
-     $l10n.format("IssueAttributeValueActive", $attr.Name)
-    #end
-    </td>
+  </td>
 <td>$attr.AttributeType.Name</td>
 #if (!$isMultiple)
 <td>$attVal.Value</td>
