* ScarabBundle_en_US.properties: fix IssueTypeNotFound resource. * AttributeGroupEdit.java: doSaveglobal(): if issue type is null, do not continue actio n. * GlobalAttributeEdit.vm: pass issue type id on when deleting an attribute. * ScarabRequestTool.java: getIssueType(). if issue type id key is not valid, return nul l issue type rather than print stack trace. Issue number: 19569 Reviewed by:   dlr

--- a/src/templates/screens/admin/GlobalAttributeEdit.vm
+++ b/src/templates/screens/admin/GlobalAttributeEdit.vm
@@ -9,6 +9,7 @@
    <input type="hidden" name="action" value="admin.GlobalAttributeEdit" />
    <input type="hidden" name="attId" value="$attribute.AttributeId" />
    <input type="hidden" name="groupId" value="$groupId" />
+   <input type="hidden" name="issueTypeId" value="$!data.Parameters.getString("issueTypeId")" />
 
    #set ($cancelTemplate = $data.Parameters.getString("$scarabG.Constant.CANCEL_TEMPLATE", "admin,GlobalAttributeShow.vm"))
    <input type="hidden" name="$scarabG.Constant.CANCEL_TEMPLATE" value="$cancelTemplate" />
