Issue number: 19519 - Heading displayed as "Error on Attribute Id=111: kannaki " in report result
Modified files:
* src/i18n/ScarabBundle_en_US.properties - added resources
  IncompleteReportDefinition, ReportDefinitionModified,
  ErrorOccurredCheckingMessage to be used when a report definition has
  been rendered invalid.
* src/java/org/tigris/scarab/actions/ConfigureReport.java -
  added doVerifyReport and similar logic to doGeneratereport to avoid
  including invalid data when editing or running a report.
* src/java/org/tigris/scarab/reports/ReportBridge.java -
  added removeStaleDefinitions() and supporting methods: removeStaleOptions
  and removeStaleUserAttributes to clean up a report which may conflict
  with the current state of the application.
* src/java/org/tigris/scarab/screens/ReportExport.java -
  doBuildTemplate:  added some defensive code to avoid errors in the
  event the method is invoked with an invalid report definition, however,
  the current application flow does not require it.
* src/templates/reports/SelectUsers.vm -
  a cosmetic change to not show the selected users table headers, if there
  are no users selected.
* src/templates/screens/reports/ReportList.vm -
  invoke the appropriate action events, to clean up any invalid parts
  of the report before editing or running the report.
* src/templates/screens/reports/Report_1.vm - Check that it is still okay
  to create the report and give a message if not.

Reviewed by: venkat

--- a/src/templates/reports/SelectUsers.vm
+++ b/src/templates/reports/SelectUsers.vm
@@ -8,10 +8,9 @@
 
 <h3>$l10n.SelectedUsers</h3>
 
-#if (!$selectedHeading)
+#if (!$selectedHeading.ReportUserAttributes || $selectedHeading.ReportUserAttributes.isEmpty())
     <p><em>$l10n.NoneAssigned.</em></p>
 #else
-		
     <table width="100%" border="1" cellspacing="2" cellpadding="3">
       <tr>
 		<th nowrap="nowrap">$l10n.Select</th>
