--- a/src/templates/screens/reports/ReportList.vm
+++ b/src/templates/screens/reports/ReportList.vm
@@ -45,7 +45,7 @@ $l10n.ClickToExecute
  #end
   <td>
  #if ($report.isEditable($user))
-$link.setPage("reports,Info.vm").setLabel("$report.Name").addPathInfo("report_id", "$report.ReportId")
+$link.setPage("reports,Info.vm").setLabel("$report.Name").addPathInfo("report_id", "$report.ReportId").addPathInfo("eventSubmit_doVerifyreport", "foo").setAction("ConfigureReport")
  #else
   $report.Name
  #end
@@ -53,7 +53,7 @@ $link.setPage("reports,Info.vm").setLabel("$report.Name").addPathInfo("report_id
 
 <td>#if ($!report.Description != '') $report.Description #else &nbsp; #end</td>
 
-<td>$link.setPage("reports,Report_1.vm").setLabel("$report.Scope.Name").addPathInfo("report_id", "$report.ReportId")</td>
+<td>$link.setPage("reports,Report_1.vm").setLabel("$report.Scope.Name").addPathInfo("report_id", "$report.ReportId").addPathInfo("eventSubmit_doGeneratereport", "foo").setAction("ConfigureReport")</td>
 
 <td>
  #set ($createdUser = $scarabR.getUser($report.UserId.toString()))
