* IssueType.java: add method getDisplayName() to return name in the form of [project name] ([global name]) * XModuleList.vm:  move logic out of template by calling getDisplayName method * EditXModuleList.vm: here we want only the module name, as here the issue type is specific to this module Issue number:  19263 Reviewed by:   venkat

--- a/src/templates/screens/EditXModuleList.vm
+++ b/src/templates/screens/EditXModuleList.vm
@@ -22,7 +22,7 @@
     #set ($itemModule = $item.Module)
     #set ($itemIT = $item.IssueType)
     <td>$itemModule.RealName</td>
-    <td>$itemModule.getRModuleIssueType($itemIT).DisplayName ($itemIT.Name)</td>
+    <td>$itemModule.getRModuleIssueType($itemIT).DisplayName</td>
     <td>$itemIT.Description</td>
   </tr>        
  #end
