Collision info should correctly display the user who performed the last activity.
Change log:
File:  src/templates/macros/GlobalMacros.vm
#macro (printCollisionInfo) - Use last activityset's creator instead of the
issue's, while displaying collision info.
-Internationalized the string "Issue last modified by".

File:src/java/org/tigris/scarab/actions/base/BaseModifyIssue.java
#isCollision() - put the ActivitySet instead of the list of Activity objects in the context variable "lastActivities".

File:src/i18n/ScarabBundle_en_US.properties
Added property-IssueLastModifiedBy=Issue {0} last modified by

File:adapter-scarab/scarab/src/i18n/i18n_overrides/OverridesScarabBundle_en.properties
Added property-IssueLastModifiedBy=Artifact {0} last modified by

Issue: PCN19717
Reviewed by: Daniel Rall
Committed by: Venkat <venkat@collab.net>

--- a/src/templates/macros/GlobalMacros.vm
+++ b/src/templates/macros/GlobalMacros.vm
@@ -635,10 +635,12 @@ selected the radio button.
   </em></p>
   #foreach ($obj in $lastActivities)
     #set ($issue = $obj.get(0))
-    <p>Issue $issue.UniqueId last modified by 
-    <a href="mailto:$issue.CreatedBy.Email">$issue.CreatedBy.Name</a></p> 
+    #set ($activitySet = $obj.get(1))
+    #set ($user = $scarabR.getUser($activitySet.CreatedBy))
+    <p>$l10n.format('IssueLastModifiedBy', "$issue.UniqueId")
+      <a href="mailto:$user.Email">$!user.Name</a> </p>
     <ul>
-    #foreach ($activity in $obj.get(1))
+    #foreach ($activity in $activitySet.Activitys)
       <li>$activity.Description</li>
     #end
     </ul>
