Dont allow duplicate check element to be placed at the first position, and do allow it to be positioned last.
* src/templates/screens/admin/GlobalArtifactTypeEdit.vm
* src/templates/screens/admin/ArtifactTypeEdit.vm
  When peforming an operation such that a "Duplicate check" element is
  created (like adding a new attribute group), "Duplicate check"
  should not be allowed to be positioned before the first attribute
  group either in the UI, nor when saving sequence numbers (meaning
  that dupCheck.sequenceNbr <= 1 is never a valid state).  The
  sequence drop-down for "Duplicate check" could even omit entries for
  the first and last sequences.
  Added condition to allow duplicate check to be positioned at the
  last position.

* src/java/org/tigris/scarab/actions/admin/GlobalArtifactTypeCreate.java
  #doSavegroups(): Mark even empty attributes groups which are
  sequenced before the duplicate check as dedupe groups (attributes
  may be added later on).  Also did minor optimizations and used more
  descriptive variable names.  Removed the code that assures that the
  duplicate check is not at the end.

* src/java/org/tigris/scarab/actions/admin/ArtifactTypeEdit.java
  Removed the code that assures that the duplicate check is not at the
  end.

* src/java/org/tigris/scarab/om/AttributeGroup.java
  #delete(): "attrGroups = module.getAttributeGroups(getIssueType(),
  false);" properly positioned.

* src/java/org/tigris/scarab/om/AbstractScarabModule.java
  #getDedupeSequence(): Set the default sequence value to
  groups.size() + 1. This would allow positioning duplicate check at
  the end.

* src/java/org/tigris/scarab/om/IssueType.java
  #getDedupeSequence(): Set the default sequence value to
  groups.size()+1.  This would allow positioning duplicate check at
  the end.

Issue: PCN18801
Submitted by: Venkat/Dan
Reviewed by: Dan/Venkat

--- a/src/templates/screens/admin/ArtifactTypeEdit.vm
+++ b/src/templates/screens/admin/ArtifactTypeEdit.vm
@@ -107,7 +107,12 @@ $link.setPage("admin,ManageArtifactTypes.vm").setLabel("$l10n.Here").
 ## LIST GROUPS
 
 <h3>$l10n.AttributeGroups</h3>
-#set ($maxNum = $groups.size()+1)
+#set ($maxNum = $groups.size())
+#set ($showDuplicateCheck = ($maxNum >= 2))
+#if ($showDuplicateCheck)
+## The duplicate check gives us an extra sequence to account for.
+#set ($maxNum = $maxNum + 1)
+#end
 #if ($groups.isEmpty())
     <p><em>$l10n.NoAttributeGroups</em></p>
     <div class="functnbar3">
@@ -128,7 +133,7 @@ $link.setPage("admin,ManageArtifactTypes.vm").setLabel("$l10n.Here").
 #foreach ($group in $groups)
 ## DEDUPE
 ## Only display dedupe if there are more than one active attribute group
- #if ($velocityCount == $issueDedupeSequence && $module.getAttributeGroups($issueType, false).size() > 1)
+ #if ($velocityCount == $issueDedupeSequence && $showDuplicateCheck )
  <tr>
 #if (!$issueTypeLock)
    <td>&#160;</td>
@@ -139,7 +144,7 @@ $link.setPage("admin,ManageArtifactTypes.vm").setLabel("$l10n.Here").
     #if ($issueTypeLock)
        $issueDedupeSequence
     #else
-       #numericSelect("dupe_order" 1 $maxNum $issueDedupeSequence 1)</td>
+       #numericSelect("dupe_order" 2 $maxNum $issueDedupeSequence 1)</td>
     #end
  </tr>
  #end
@@ -159,7 +164,21 @@ $link.setPage("admin,ManageArtifactTypes.vm").setLabel("$l10n.Here").
     #end
    </td></tr>
 #end
-
+#if ($maxNum == $issueDedupeSequence && $showDuplicateCheck )
+ <tr>
+#if (!$issueTypeLock)
+   <td>&#160;</td>
+#end
+   <td>$l10n.DuplicateCheck</td>
+   <td>#booleanCheckboxLock ($rmitGroup.Dedupe $issueTypeLock)</td>
+   <td>
+    #if ($issueTypeLock)
+       $issueDedupeSequence
+    #else
+       #numericSelect("dupe_order" 2 $maxNum $issueDedupeSequence 1)</td>
+    #end
+ </tr>
+#end
 </table>
 
 
