Allow duplicate check element to be positioned last while editing Global artifact types.
* src/templates/screens/admin/GlobalArtifactTypeEdit.vm
  Added condition to allow duplicate check to be positioned last.

While deleting a dedupe group, push a non-dedupe group ahead of the duplicate check element
only if there are no other dedupe groups present.

* src/java/org/tigris/scarab/om/AttributeGroup.java
  #delete() - Before reducing a group sequence by 2, also check if it's in 3rd position.

Reviewed by: Dan Rall
Committed by: Venkat
Issue: PCN18801

--- a/src/templates/screens/admin/GlobalArtifactTypeEdit.vm
+++ b/src/templates/screens/admin/GlobalArtifactTypeEdit.vm
@@ -103,8 +103,7 @@
    <td>&#160;</td>
    <td>$l10n.DuplicateCheck</td>
    <td>#booleanCheckbox ($itGroup.Dedupe)</td>
-   #set ($deDupeMaxNum = $maxNum - 1)
-   <td>#numericSelect("dupe_order" 2 $deDupeMaxNum $issueDedupeSequence 1)</td>
+   <td>#numericSelect("dupe_order" 2 $maxNum $issueDedupeSequence 1)</td>
  </tr>
  #end
   #set ($agGroup = $intake.AttributeGroup.mapTo($group))
@@ -113,6 +112,14 @@
   <td>$link.setPage("admin,GlobalAttributeGroupEdit.vm").addPathInfo("groupid", $group.AttributeGroupId).addPathInfo("issueTypeId", $issueType.IssueTypeId).setLabel("$group.Name")</td>
   <td>#booleanCheckbox ($agGroup.Active)</td>
   <td>#numericSelect($agGroup.Order.Key 1 $maxNum $group.Order 1)</td>
+ </tr>
+#end
+#if ($showDuplicateCheck && $issueDedupeSequence == $maxNum)
+ <tr>
+  <td>&#160;</td>
+  <td>$l10n.DuplicateCheck</td>
+  <td>#booleanCheckbox ($itGroup.Dedupe)</td>
+  <td>#numericSelect("dupe_order" 2 $maxNum $issueDedupeSequence 1)</td>
  </tr>
 #end
 #else
