* AssignIssue.java: update(), doSave(),  remove(): when selecting a user association for updating or removing, must identify by both user id and attribute id so the correct one gets removed, in the case where a user is assigned to multiple attributes. When checking if a user in the assign list was previously assigned, check the attribute as well as the user id. * AssignIssue.vm: include attribute id in the select name. Issue number:  18315 Reviewed by:   Venkat

--- a/src/templates/screens/AssignIssue.vm
+++ b/src/templates/screens/AssignIssue.vm
@@ -32,7 +32,7 @@
   #set ($userId = $user.UserId)
     #indexedRows($velocityCount)
     <td>
-      <input type="checkbox" name="select_user" value="$userId" />
+      <input type="checkbox" name="select_user" value="{$userId}_$attr.AttributeId" />
       <input type="hidden" name="old_attr_$userId" value="$attr.AttributeId" />
     </td>
     <td><a href="mailto:$user.Email">$user.UserName</a></td>
