Corrected error which occurs when trying to rename a new user attribute.
* src/java/org/tigris/scarab/om/Attribute.java
  Corrected method JavaDoc formatting.

  hasModuleMappings(): Wrapped hasMapping(Module, IssueType).

  hasMapping(): Gated use of parameters, which may now be pased in as
  null.

  hasGlobalIssueTypeMappings(): Renamed from hasIssueTypeMappings().
  Wrapped hasGlobalMapping(IssueType).

  hasGlobalMapping(IssueType): Renamed from hasMapping(IssueType).
  Gated use of parameter, which may now be pased in as null.

* src/java/org/tigris/scarab/actions/admin/GlobalAttributeEdit.java
  doSaveattributedata(): Renamed hasIssueTypeMappings() to
  hasGlobalIssueTypeMappings().

  mapAttribute(): Renamed hasMapping(IssueType) to
  hasGlobalMapping(IssueType).

* src/templates/screens/admin/UserAttributeEdit.vm
* src/templates/screens/admin/GlobalAttributeEdit.vm
  Renamed hasIssueTypeMappings() to hasGlobalIssueTypeMappings().


Issue: PCN19675
Submitted by: Daniel Rall, IRK, and John McNally
Reviewed by: John McNally and Venkat

--- a/src/templates/screens/admin/GlobalAttributeEdit.vm
+++ b/src/templates/screens/admin/GlobalAttributeEdit.vm
@@ -18,7 +18,7 @@
    $l10n.ConfirmDeleteAttribute
    #if ($attribute.hasModuleMappings())
        $l10n.AttrMappedToModules
-   #elseif ($attribute.hasIssueTypeMappings())
+   #elseif ($attribute.hasGlobalIssueTypeMappings())
        $l10n.AttrMappedToIssueTypes
    #end
    <p><input type="submit" value="$l10n.ConfirmDelete"  name="eventSubmit_doDeleteattribute" /></p>
